<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="loading">Загрузка...</string>
    <string name="buffering">Буферизация...</string>
    <string name="translationUnavailable">Трансляция недоступна, попробуйте еще раз</string>
    <string name="sdCardUnavailable">Нет доступа к SD карте</string>
    <string name="cantLoadChannels">Невозможно загрузить каналы</string>
    <string name="cantLoadTracks">Невозможно загрузить трэки</string>
    <string name="cantLoadTrack">Невозможно загрузить трэк</string>
    <string name="ac_settings">Настройки</string>
    <string name="ac_refresh">Обновить</string>
    <string name="ac_search">Поиск</string>
    <string name="ac_exit">Выход</string>
    <string name="ac_favourite">Избранное</string>
    <string name="request_exit">Хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="radio_preferences">Настройки радио</string>
    <string name="favourites_title">Избранное</string>
    <string name="favourites_summary">Вкл./Выкл. поддержку избранных станций</string>
    <string name="sort_title">Сортировка каналов</string>
    <string name="sort_summary">Выберите критерий для сортировки каналов</string>
    <string name="sort_dialog_title">Критерий</string>
    <string name="sort_track_title">Сортировка трэков</string>
    <string name="sort_track_summary">Выберите критерий для сортировки трэков</string>
    <string name="sort_by_range">Частота</string>
    <string name="sort_by_name">Имя</string>
    <string name="sort_by_time">Время</string>
    <string name="sort_by_rate">Популярность</string>
    <string name="delete_channel">Удалить</string>
    <string name="to_favourites">В избранное</string>
    <string name="channel_preferences">Настройки канала</string>
    <string name="track_list_range_title">Временной интервал</string>
    <string name="track_list_range_summary">Временной интервал для загрузки трэков</string>
    <string name="track_list_range_dialog_title">Интервал</string>
    <string name="track_list_range_default">Сутки</string>
    <string name="notification_preferences">Настройки уведомления</string>
    <string name="notification_title">Уведомления</string>
    <string name="notification_summary">Вкл./Выкл. уведомления</string>
    <string name="notification_sound_title">Звук уведомления</string>
    <string name="notification_sound_summary">Вкл./Выкл. звук уведомления</string>
    <string name="when_playing_title">Только при воспроизведении</string>
    <string name="when_playing_summary">Отображать уведомление при воспроизведении</string>
    <string name="reconnect_preferences">Переподключаться при потере соединения</string>
    <string name="reconnect">Переподключаться</string>
    <string name="reconnect_count">Кол-во попыток</string>
    <string name="reconnect_timeout">Таймаут (сек)</string>
    <string name="loadingTracks">Загрузка треков...</string>
    <string name="search">Поиск</string>
    <string name="unlicensed_dialog_title">Приложение не лицензировано</string>
    <string name="unlicensed_dialog_body">Данное приложение не лицензировано. Пожалуйста, приобретите его на Android Market.</string>
    <string name="buy_button">Купить</string>
    <string name="quit_button">Выход</string>
    <string name="lvl_application_error_title">Ошибка при проверке лицензии</string>
    <string name="lvl_application_error_dialog_body">Произошла ошибка при проверке лицензионности приложения. Повторить?</string>
    <string name="retry_button">Повторить</string>
    <string name="on">Вкл.</string>
    <string name="off">Выкл.</string>
    <string name="incorrect_time">Выбрано неверное время</string>
    <string name="incorrect_date">Выбрана неверная дата</string>
</resources>
