<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.preference.PreferenceCategory android:title="@string/radio_preferences">
        <CheckBoxPreference android:title="@string/favourites_title" android:key="favourites_key" android:summary="@string/favourites_summary" android:defaultValue="false" />
        <ListPreference android:entries="@array/sort_channel_criteria" android:title="@string/sort_title" android:key="channel_sort_key" android:summary="@string/sort_summary" android:defaultValue="sort_by_range" android:dialogTitle="@string/sort_dialog_title" android:entryValues="@array/sort_channel_criteria_values" />
        <ListPreference android:entries="@array/sort_track_criteria" android:title="@string/sort_track_title" android:key="track_sort_key" android:summary="@string/sort_track_summary" android:defaultValue="sort_by_time" android:dialogTitle="@string/sort_dialog_title" android:entryValues="@array/sort_track_criteria_values" />
    </android.preference.PreferenceCategory>
    <android.preference.PreferenceCategory android:title="@string/notification_preferences">
        <CheckBoxPreference android:title="@string/notification_title" android:key="notification_key" android:summary="@string/notification_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/notification_sound_title" android:key="notification_sound_key" android:summary="@string/notification_sound_summary" android:dependency="notification_key" android:defaultValue="false" />
    </android.preference.PreferenceCategory>
    <android.preference.PreferenceCategory android:title="@string/reconnect_preferences">
        <CheckBoxPreference android:title="@string/reconnect" android:key="reconnect_key" android:defaultValue="true" />
        <ListPreference android:entries="@array/reconnect_criteria" android:title="@string/reconnect_count" android:key="reconnect_count_key" android:dependency="reconnect_key" android:defaultValue="5" android:dialogTitle="@string/reconnect_count" android:entryValues="@array/reconnect_criteria" />
        <ListPreference android:entries="@array/reconnect_timeout" android:title="@string/reconnect_timeout" android:key="reconnect_timeout_key" android:dependency="reconnect_key" android:defaultValue="10" android:dialogTitle="@string/reconnect_timeout" android:entryValues="@array/reconnect_timeout" />
    </android.preference.PreferenceCategory>
</PreferenceScreen>
